<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendPassword">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="@string/password"
            android:drawableStart="@drawable/ic_markunread"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />

        <Button
            android:id="@+id/ForgotPasswordButton"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_warning"
            android:textColor="@color/textPrimary"
            android:text="@string/send_password_via_email" />

    </LinearLayout>

</ScrollView>