<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="@string/username"
            android:drawableStart="@drawable/ic_person_outline"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="@string/password"
            android:drawableStart="@drawable/ic_lock_open"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="80dp">

            <Button
                android:id="@+id/LoginButton"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_success"
                android:textColor="@color/textPrimary"
                android:text="@string/login"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/RegisterButton"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_primary"
                android:textColor="@color/textPrimary"
                android:text="@string/register"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Button
            android:id="@+id/ForgotPasswordButton"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_warning"
            android:textColor="@color/textPrimary"
            android:text="@string/forgot_password" />

    </LinearLayout>

</ScrollView>