<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MenuFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dashboard"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_warning"
                    android:drawableTop="@drawable/ic_dashboard"
                    android:text="@string/dashboard"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/bonus"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_warning"
                    android:drawableTop="@drawable/ic_star"
                    android:text="@string/bonus"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_warning"
                    android:drawableTop="@drawable/ic_border"
                    android:text="@string/register"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/profile"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_warning"
                    android:drawableTop="@drawable/ic_person"
                    android:text="@string/profil"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/pin"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_warning"
                    android:drawableTop="@drawable/ic_local_activity"
                    android:text="@string/pin"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/network"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_warning"
                    android:drawableTop="@drawable/ic_device_hub"
                    android:text="@string/network"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/withdraw"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_warning"
                    android:drawableTop="@drawable/ic_credit_card"
                    android:text="@string/withdraw" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>