<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ppob.postPaid.PostPaidActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/PostPaidButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/pulsa" />

            <RadioButton
                android:id="@+id/DataButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/internet" />

        </RadioGroup>

        <ImageView
            android:id="@+id/LogoImageView"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            tools:srcCompat="@mipmap/ic_launcher_foreground" />

        <EditText
            android:id="@+id/PhoneNumberEditText"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|phone"
            android:hint="@string/no_hp" />

        <Spinner
            android:id="@+id/ProductSpinner"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/BalanceTextView"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ContinueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_primary"
            android:text="@string/teruskan"
            android:textColor="@color/textPrimary" />

    </LinearLayout>

</ScrollView>