<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ppob.bpjs.BPJSActivity">

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/PhoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/no_hp"
            android:ems="10"
            android:inputType="phone"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/CustomerID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/id_pelanggan"
            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/ProductSpinner"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/BalanceTextView"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ContinueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_primary"
            android:text="@string/teruskan"
            android:textColor="@color/textPrimary" />

    </LinearLayout>

</ScrollView>